@@ -35,14 +35,33 @@
 
 # -------------------------------------------------------------------
 
-from src.module.agent.memory.projector import CNNProjector
-import torch
+# from src.module.agent.memory.projector import CNNProjector
+# import torch
 
 
-a = CNNProjector(0)
-b = torch.rand(2, 84 * 84)
-c = a.batch_project(b)
-print(c)
+# a = CNNProjector(0)
+# b = torch.rand(2, 84 * 84)
+# c = a.batch_project(b)
+# print(c)
+
+# -------------------------------------------------------------------
+
+a = set()
+
+a.add(1)
+
+b = set()
+
+b.add(2)
+
+a = a.union(b)
+
+print(a)
+print(len(a))
+
+
+
+
 
 # -------------------------------------------------------------------
 
