@@ -1,3 +1,4 @@
+211018 auto propagation: step 1, add crossing obs
 211017 add support for adelaide Phoenix
 211017 fix cnn projector issue
 211011 add knn action for transition graph
